--- a/blogspot.html
+++ b/blogspot.html
@@ -22,6 +22,8 @@
             <p>Suscribete y dale like</p>
         </div>    
     </div>
-    
+    <div id="footer">
+        Hecho con amor en Platzi <3
+    </div>
 </body>
 </html>
